fix(hierarchy): fix text-wrapping on pending & error numbers on Safari

--- a/src/app/hierarchy/hierarchy.component.css
+++ b/src/app/hierarchy/hierarchy.component.css
@@ -8,12 +8,12 @@ span.total {
     height: fit-content;
     width: fit-content;
     border-radius: 1rem;
-    padding: 0.3rem 0.5rem;
+    padding: 0.1rem 0.5rem;
     margin-left: 0.5rem;
     font-size: 0.65rem;
     vertical-align: middle;
     color: white;
-    text-wrap: nowrap;
+    display: inline-block;
 }
 
 a.hierarchy.pending,
